# geoslurp

./: .gitignore  .readthedocs.yaml  README.md  config.py  defaultheader.txt  docker-compose.yml  examples  geoslurpd.py  pyproject.toml  requirements.txt  run_compose.sh  setup.py  slurpconf.py
.github/workflows/: python-publish.yml
clitools/: geoslurper.py  gridMask.py  test.py
docs/: .buildinfo  Makefile  clitools.html  confsettings.html  examples.html  genindex.html  geoslurpmodule.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  pyexamples.html  reference.html  requirements.txt  search.html  searchindex.js  tableconventions.html  usingcli.html
docs/.doctrees/: clitools.doctree  environment.pickle  examples.doctree  geoslurpmodule.doctree  index.doctree  installation.doctree  introduction.doctree  reference.doctree
docs/_modules/: index.html
docs/_sources/: clitools.rst.txt  examples.rst.txt  geoslurpmodule.rst.txt  index.rst.txt  installation.rst.txt  pyexamples.rst.txt  reference.rst.txt  tableconventions.rst.txt
docs/_static/: documentation_options.js
docs/apigeoslurp/: geoslurp.datapull.html  geoslurp.dataset.html  geoslurp.db.html  geoslurp.html  geoslurp.meta.html  modules.html
docs/examples/: BasicDiscovery.html  BasicDiscovery.ipynb  CreateDynDSet.html  CreateDynDSet.ipynb  UsingCataloguedDsets.html  connectnQuery.html  export2Portable.html  pyexamples.html  usingcli.html
docs/reference/: geoslurp.config.html  geoslurp.datapull.html  geoslurp.dataset.html  geoslurp.db.html  geoslurp.dbfunc.html  geoslurp.discover.fesom.html  geoslurp.discover.generic.html  geoslurp.discover.gravity.html  geoslurp.discover.html  geoslurp.discover.oceanobs.html  geoslurp.discover.oras.html  geoslurp.html  geoslurp.tools.html  geoslurp.types.html  geoslurp.view.html  modules.html
docs/source/: clitools.rst  conf.py  examples.rst  installation.rst  introduction.rst  reference.rst  usingcli.rst
docsrc/: Makefile  clitools.rst  conf.py  confsettings.rst  examples.rst  index.rst  installation.rst  introduction.rst
docsrc/apigeoslurp/: geoslurp.datapull.rst  geoslurp.dataset.rst  geoslurp.db.rst  geoslurp.meta.rst  geoslurp.rst
docsrc/examples/: BasicDiscovery.ipynb  CreateDynDSet.ipynb  connectnQuery.ipynb  discover.rst  export2Portable.ipynb  pyexamples.rst  registerDset.rst  usingcli.rst
docsrc/reference/: geoslurp.config.rst  geoslurp.datapull.rst  geoslurp.db.rst  geoslurp.dbfunc.rst  geoslurp.discover.rst  (+6 more)
examples/: CreateDynDSet.ipynb  connectnQuery.ipynb
geoslurp/: DBclient.py  PluginManager.py  URLtool.py  __init__.py  commonOptions.py  dbTablestructure.py  geoslurpClient.py  slurpconf.py  taskScheduler.py
geoslurp_userplugins/: GSHHGDsets.py  IceSatDrainDiv.py  ORAS5.py  README.md  RadsDsets.py  __init__.py  geoshapes.py  glofas.py  gracefilters.py  icgemDsets.py  imerg.py  mss_cnes_cls2015.py  naturalearth.py  orsiFronts.py  sebs.py  sword.py
postgis/: Dockerfile  docker-compose_template.yml  run_compose.sh  run_docker.sh  setupgeoslurp.sql  setuproles.sql
slurpers/: slurper.py
tests/: rwxar.py
userplugins/: AWIPIES.py  EasyCora.py  FESOM.py  ORAS5.py  README.md  RGIDsets.py  __init__.py  deg1n2.py  gleam.py  grdc.py  sebs.py  swords.py  wribasin.py
(+352 files in other folders)
